@startuml database
hide empty members

class diet {
  {field} id => serial
  {field} name => varchar(255)
}

class ingredientCategory {
  {field} id => serial
  {field} name => varchar(255)
}

class recipeCategory {
  {field} id => serial
  {field} name => varchar(255)
}

class suggestionCategory {
  {field} id => serial
  {field} name => varchar(255)
}

class mealCategory {
  {field} id => serial
  {field} name => varchar(255)
}

class role {
  {field} id => serial
  {field} name => varchar(255)
}

class ingredient {
  {field} id => serial
  {field} name => varchar(255)
  {field} allergen => boolean
}

class recipe {
  {field} id => serial
  {field} name => varchar(255)
  {field} summary => varchar(500)
  {field} description => text
  {field} image => blob
  {field} rating => float
}


class advert {
  {field} promotion => text
  {field} price => float
}

class suggestion {
  {field} id => serial
  {field} title => varchar(255)
  {field} description => text
}


class comment {
  {field} rating => float
  {field} content => text
  {field} date => date
}


class calendar_entry {
  {field} id => serial
  {field} date => date
  {field} quantity => float
}


class recipeList {
  {field} name => varchar(255)
}


class cart_entry {
  quantity => float
}

class partner {
  {field} id => serial
  {field} name => varchar(255)
  {field} description => text
  {field} website => varchar(255)
}

class partnerOffer {
  {field} promotion => text
  {field} price => float
}

class news {
  {field} id => serial
  {field} title => varchar(255)
  {field} content => text
  {field} date => date
}

class user {
  {field} id => serial
  {field} name => varchar(255)
  {field} email => varchar(255)
  {field} password => varchar(255)
  {field} phone => varchar(32)
  {field} birthdate => date
  {field} question => varchar(255)
  {field} answer => varchar(255)
}

advert "*"        -u-> "1" ingredient: > is about
partnerOffer "*"  -u-> "1" ingredient: is about
cart_entry "*"          --> "*" ingredient: > contains
recipe "*"        --> "*" ingredient: > has
user "*"          --> "*" ingredient: > is allergic to

advert "*"        --> "1" partner: > is from
partnerOffer "*"  --> "1" partner: > is from

calendar_entry "*"      --> "1" recipe: > planned
comment "*"       --> "1" recipe: > is about
cart_entry "*"          --> "*" recipe: > contains
recipeList "*"    --> "*" recipe: > has
suggestion "*"    -u-> "1" recipe: > is about

calendar_entry "1"      -u-> "1" user: > owns
cart_entry "1"          -u-> "1" user: > owns
recipeList "*"    -u-> "1" user: > owns
comment "*"       -u-> "1" user: > is from
news "*"          --> "1" user: > is from

calendar_entry "*"      -u-> "1" mealCategory: > is
ingredient "*"    --> "*" ingredientCategory: > is
recipe "*"        --> "1" recipeCategory: > is
recipe "*"        -l-> "1" diet: > is
suggestion "*"    -d-> "1" suggestionCategory: > is
user "*"          -u-> "1" role: > is
@enduml